<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Draft Day</string>
    <string name="default_footer">Total: 0 pts</string>
    <string name="static_round">Round </string>
    <string name="static_sub_round">.</string>
    <string name="dash">-</string>
    <string name="space"> </string>
    <string name="static_left_paren">(</string>
    <string name="static_right_paren">)</string>
    <string name="static_pts">pts</string>
    <string name="static_total">Total: </string>
    <string name="static_for">for</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="menu_list">Full List</string>
    <string name="static_totals">Totals</string>
    <string name="static_footer_a">A:</string>
    <string name="static_footer_b">B:</string>
    <string name="dialog">Testing some shit#8230;</string>
    <string name="full_list_label">Draft Order</string>
    <string name="left">&lt;</string>
    <string name="right">&gt;</string>

</resources>