<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dip"
    android:paddingRight="8dip" >

  <TextView
      android:id="@+id/static_round"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:text="@string/static_round"
      android:textSize="24dip"
      android:textColor="#FFC2C2C2"
      android:layout_alignBottom="@id/static_round" />

  <TextView
      android:id="@+id/row_round"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/static_round"
      android:paddingLeft="8dip"
      android:textSize="24dip"
      android:textColor="#FFC2C2C2"
      android:layout_alignBottom="@id/static_round" />

  <TextView
      android:id="@+id/static_sub_round"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/row_round"
      android:paddingLeft="8dip"
      android:text="@string/static_sub_round"
      android:textSize="24dip"
      android:textColor="#FFC2C2C2"
      android:layout_alignBottom="@id/static_round" />

  <TextView
      android:id="@+id/row_sub_pick"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_toRightOf="@id/static_sub_round"
      android:paddingLeft="8dip"
      android:textSize="24dip"
      android:textColor="#FFC2C2C2"
      android:layout_alignBottom="@id/static_round" />

  <TextView
      android:id="@+id/static_left_paren"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_marginLeft="160dip"
      android:textColor="#FFC2C2C2"
      android:text="@string/static_left_paren"
      android:layout_alignBottom="@id/static_round" />

  <TextView
      android:id="@+id/row_pick"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="#FFC2C2C2"
      android:layout_toRightOf="@id/static_left_paren"
      android:layout_alignBottom="@id/static_round" />

  <TextView
      android:id="@+id/static_right_paren"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="#FFC2C2C2"
      android:layout_toRightOf="@id/row_pick"
      android:text="@string/static_right_paren"
      android:layout_alignBottom="@id/static_round" />

  <TextView
      android:id="@+id/row_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="24dip"
      android:textColor="#FFC2C2C2"
      android:layout_alignParentRight="true" />

</RelativeLayout>