<?xml version="1.0" encoding="utf-8"?>
<TabHost
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical" >

    <TabWidget
        android:id="@android:id/tabs"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0" />

    <android.support.v4.view.ViewPager
        android:id="@+id/trade_pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:text="@string/static_totals"
        android:textAllCaps="true"
        android:background="#FF323232"
        android:textColor="#FFF3F3F3" />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FFA3A3A3" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FF323232"
        android:layout_weight="0"
        android:padding="8dp"
        android:orientation="horizontal" >

      <RelativeLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1" >

        <TextView
            android:id="@+id/static_footer_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FFF3F3F3"
            android:layout_alignParentLeft="true"
            android:paddingLeft="25dp"
            android:paddingRight="8dp"
            android:text="@string/static_footer_a" />

        <TextView
            android:id="@+id/footer_total_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="25dp"
            android:textSize="24dp"
            android:textColor="#FFF3F3F3" />

      </RelativeLayout>

      <FrameLayout
          android:layout_width="1dp"
          android:layout_height="match_parent"
          android:background="#FFA3A3A3" />

      <RelativeLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1" >

        <TextView
            android:id="@+id/static_footer_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="#FFF3F3F3"
            android:layout_alignParentLeft="true"
            android:paddingLeft="25dp"
            android:text="@string/static_footer_b" />

        <TextView
            android:id="@+id/footer_total_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="25dp"
            android:textSize="24dp"
            android:textColor="#FFF3F3F3" />

      </RelativeLayout>
      

    </LinearLayout>

  </LinearLayout>
</TabHost>